[package]
name = "st7735-async-low"
version = "0.1.0"
authors = ["Cheng Sheng <chengsheng@google.com>"]
licence = "Apache-2.0"
categories = ["asynchronous", "embedded", "no-std"]
keywords = ["st7735", "lcd", "futures", "low", "api", "async", "await"]
edition = "2018"
description = "Low-level async library for 4-wire serial ST7735."

[dependencies]
async-trait-static = "0.1.4"
paste = "1.0"

[dev-dependencies.tokio]
version = "1.4"
features = ["rt"]

[dev-dependencies.mockall]
version = "0.9"
features = ["nightly"]
