[package]
name = "stm32f3348_disco"
version = "0.1.0"
authors = ["Cheng Sheng <chengsheng@google.com>"]
licence = "Apache-2.0"
edition = "2018"
description = "An example to use crate st7735-async-low."

[dependencies]
async-trait-static = "0.1.4"
cortex-m = "*"
nb= "*"
panic-halt = "*"
st7735-async-low = { path = "../.." }

[dependencies.cortex-m-rt]
version = "*"
features = ["device"]

[dependencies.stm32f3]
version = "0.12.1"
features = ["stm32f3x4", "rt"]

[dependencies.stm32f3xx-hal]
version = "0.6.1"
features = ["stm32f334", "rt"]
